<resources>
    <string name="app_name">MTS iHR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="menu_estimate">Оценить коллегу</string>
    <string name="menu_delete">Удалить</string>

    <string name="share_settings_summary">Пригласить коллегу установить приложение - коллега получит электронное сообщение с сылкой на приложение.</string>
    <string name="share_settings">Поделиться приложением</string>
    <string name="menu_style_settings_summary">Настройте внешний вид главного меню под себя!</string>
    <string name="menu_style_settings">Главное меню</string>
    <string name="save_history_settings_summary">Сохранять отправленные оценки в память телефона</string>
    <string name="save_history_settings">Сохранять историю оценок</string>
    <string name="update_settings">Обновить приложение</string>
    <string name="about_settings">О программе</string>
    <string name="delete_colleague_settings">Очистить список коллег</string>
    <string name="delete_history_settings">Очистить историю оценок</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="help_just_desc">Это шесть главных ценностей, которые разделяет каждый сотрудник нашей компании. Мы считаем эти качества наиболее важными в нашей ежедневной работе.</string>
    <string name="help_partnership_desc">Это умение работать в команде, надежность, готовность помочь и оказать поддержку. Мы понимаем, что коллега из любого департамента — это прежде всего надежный партнер, с которым у нас общая цель: успех компании.</string>
    <string name="help_effectiveness_desc">Это нацеленность на результат, достижение поставленных целей. Залог результативности - в четком понимании своей задачи и планировании этапов ее решения. Каждый день делайте пусть небольшой, но шаг вперед, на новую ступень своего пути к цели и никогда не останавливайтесь на достигнутом.</string>
    <string name="help_responsibility_desc">Это готовность отвечать за результат своих действий, внимательное отношение к работе. Необходимо выполнять свои обязанности качественно и в срок, не подводить коллег. Нужно не бояться брать на себя дополнительные обязательства, если это поможет команде быстрее двигаться к цели.</string>
    <string name="help_courage_desc">Это решительность, готовность первым сделать шаг вперед и что-то изменить. Ставьте перед собой амбициозные цели, проявляйте инициативу, не бойтесь принимать смелые решения. Конечно, это требует решительности. Но если вы работаете в нашей команде, ваш главный принцип: «Если не я, то кто?»</string>
    <string name="help_creation_desc">Это способность искать новые, нестандартные пути решения, мыслить за рамками привычного. Наша миссия — создание лучшего клиентского опыта. Эта по-настоящему творческая задача не предполагает стандартных решений. Лучший клиентский опыт многогранен и зависит от множества факторов, поэтому открывает простор для креативности каждого члена нашей команды.</string>
    <string name="help_openness_desc">Это готовность высказывать свое мнение и прислушиваться к мнению других, быть честным и внимательным к коллегам, открытым всему новому. Открытое обсуждение идей, непрерывный обмен мнениями — так работает команда единомышленников. Открытость к инициативам коллег даст вам возможность перенимать лучший опыт, развиваться и расти вместе с компанией, повышая свою эффективность.</string>
    <string name="pick_image_intent_text">1</string>
    <string name="menu_style_choose_image">Выбрать изображение из галлерееи, которое будет отображаться на заднем фоне главного меню. Выше представлено главное меню, как оно будет отображаться после изменения настроек приложения. </string>
    <string name="feedback_about_app">Отправить обратную связь по работе мобильного приложения. Отзывы и предложения приветствуются.</string>
    <string name="idea_about_app">Отдел льгот, компенсаций и оценки</string>
    <string name="idea2_about_app">Департамент компенсаций, льгот и администрирования</string>
    <string name="idea3_about_app">Блок по управлению персоналом</string>
    <string name="idea4_about_app">Корпоративный центр группы МТС</string>
    <string name="develop_title_about_app">Команда iHR</string>
    <string name="develop_desc1_about_app">Отдел автоматизации бизнес-процессов</string>
    <string name="about_app_footer">© 2016 ПАО «МТС». Все права защищены.</string>
</resources>
