<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mtsihr.Fragments.SettingsFragment">

    <RelativeLayout
        android:id="@+id/about_relative"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorBlack"
            android:text="@string/about_settings"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView2"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/update_relative"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorBlack"
            android:text="@string/update_settings"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView7"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/share_relative"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorBlack"
            android:text="@string/share_settings"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView4"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/share_settings_summary"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/menu_style_relative"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorBlack"
            android:text="@string/menu_style_settings"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView3"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/menu_style_settings_summary"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/history_save_relative"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorBlack"
            android:text="@string/save_history_settings"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/history_save_switch"
            android:layout_width="50dp"
            android:layout_height="28dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/toggle_selector"
            android:checked="true"
            android:text=""
            android:textOff=""
            android:textOn=""
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/save_history_settings_summary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/delete_colleague_list_butt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/delete_colleague_settings" />
    <Button
        android:id="@+id/delete_history_list_butt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/delete_history_settings" />
</LinearLayout>