<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mtsihr.Fragments.AboutAppFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ihr" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/border_top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:background="@drawable/border_bottom"
                android:paddingTop="5dp"
                android:text="Версия"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/app_version_tv"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical|end"
                android:background="@drawable/border_bottom"
                android:gravity="end"
                android:paddingRight="16dp"
                android:paddingTop="5dp"
                android:text="1.0.0-b"
                android:textAlignment="textEnd"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:background="@drawable/border_bottom"
                android:paddingTop="5dp"
                android:text="Дата релиза"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical|end"
                android:background="@drawable/border_bottom"
                android:gravity="end"

                android:paddingRight="16dp"
                android:paddingTop="5dp"
                android:text="31.08.2016"
                android:textAlignment="textEnd"
                android:textSize="16sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/go_to_help_relative"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="Помощь/Справка"
                android:textColor="@color/colorLightBlue"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="14dp"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/border_bottom" />

        <RelativeLayout
            android:id="@+id/feedback_relative"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="Обратная связь"
                android:textColor="@color/colorLightBlue"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="14dp"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/border_bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/feedback_about_app" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="6dp"
            android:text="ИДЕЯ" />
        <LinearLayout
            android:background="@drawable/border_top_and_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:padding="3dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/oplata"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idea_about_app"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idea2_about_app"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idea3_about_app"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idea4_about_app"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="6dp"
            android:text="РАЗРАБОТЧИК" />
        <LinearLayout
            android:background="@drawable/border_top_and_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:padding="3dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ihr_logo"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/develop_title_about_app"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/develop_desc1_about_app"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idea3_about_app"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idea4_about_app"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_footer"/>
    </LinearLayout>
</ScrollView>
